# ag06_mixer

./: .editorconfig  .env  .env.enterprise  .gitignore  AG06_DEPLOYMENT_GUIDE.md  AG06_DEPLOYMENT_READY.md  AG06_DEPLOYMENT_REPORT.json  AG06_RESEARCH_ANALYSIS_REPORT.md  AG06_RESEARCH_IMPLEMENTATION_SUMMARY.md  AG06_SDK_README.md  AG06_TROUBLESHOOTING_GUIDE.md  AIOKE_2025_DEPLOYMENT_STATUS.md  AIOKE_CRITICAL_ASSESSMENT_REPORT.md  AIOKE_DEPLOYMENT_GUIDE.md  AIOKE_TESTING_GUIDE.md  AIOKE_TEST_REPORT.md  AIOKE_TRACE_SUMMARY.md  AIOKE_TROUBLESHOOTING_GUIDE.md  AI_MIXING_STUDIO_COMPLETE.md  API_DOCUMENTATION.md  AUTONOMOUS_COMPLETION_REPORT.md  Brewfile  CHATGPT_CUSTOM_GPT_INSTRUCTIONS.md  CHATGPT_INTEGRATION_GUIDE.md  CHATGPT_LIVE_SETUP.md  CLOUD_NATIVE_ARCHITECTURE.md  CONSOLIDATED_REPO_PLAN.md  CRITICAL_ASSESSMENT_FINAL_REPORT.md  CRITICAL_ASSESSMENT_REPORT.md  CRITICAL_ASSESSMENT_REPORT_2025.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEVOPS_HANDOFF_GUIDE.md  DUAL_CHANNEL_SETUP_GUIDE.md  DUAL_CHANNEL_TEST_REPORT.md  Dockerfile  Dockerfile.gcp  ENTERPRISE_2025_COMPLETE.md  ENTERPRISE_2025_COMPLETE_DEPLOYMENT_REPORT.md  (+280 more)
AiOke/: COLLABORATION_STATUS.md  Package.swift
adapters/: hardware_adapter.py
agents/: audio_optimization_agent.py
ai_advanced/: computer_vision_audio.py  (+4 more)
automation-framework/python/: ag06_system_2025.py  chaos_engineering_framework.py  microservices_architecture.py  pyproject.toml  security_framework_2025.py
automation-framework/python/src/aican/: __init__.py  cli.py  notion_client.py  utils.py
src/: App.tsx
(+1137 files in other folders)
